fix theorem display

--- a/assignments/labs/04-lattice-paths.ipynb
+++ b/assignments/labs/04-lattice-paths.ipynb
@@ -250,11 +250,11 @@
     "\n",
     "**Using binomial coefficients**: I've visualized the lattices a little bit differently than Levin does in DMOI. In particular, we assume that we start on grid square (1, 1). This means that: \n",
     "\n",
-    "::: {.callout-tip}\n",
     "\n",
-    "**Theorem**: In a grid of size $m$ rows and $n$ columns with no obstructions, the number of paths from the bottom left corner to the top right corner is $\\binom{m+n-2}{m-1}$. This number is the same as $\\binom{m+n-2}{n-1}$. \n",
     "\n",
-    ":::\n",
+    "> **Theorem**: In a grid of size $m$ rows and $n$ columns with no obstructions, the number of paths from the bottom left corner to the top right corner is $\\binom{m+n-2}{m-1}$. This number is the same as $\\binom{m+n-2}{n-1}$. \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "Here's an example of a fully-worked solution. Your solutions to the other problems should look very similar. "
