--- a/docs/assignments/labs/05-gradient-descent.ipynb
+++ b/docs/assignments/labs/05-gradient-descent.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 5 SOLUTION: Analyzing Gradient Descent\n",
+    "# Lab 5: Analyzing Gradient Descent\n",
     "\n",
     "- [Your name]\n",
     "- [The name of one of your group members]\n",
@@ -147,7 +147,7 @@
     "\n",
     "The algorithm for gradient descent for $f(x) = \\frac{1}{2}x^2$ works as follows. \n",
     "\n",
-    "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\R^+$, total number of timesteps $T$. \n",
+    "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\mathbb{R}^+$, total number of timesteps $T$. \n",
     "\n",
     "1. Set $t \\gets 0$. \n",
     "2. While $t < T$: \n",
@@ -384,7 +384,7 @@
     "\n",
     "This function has its minimum at the point $x_* = -\\frac{b}{a}$. For this function, the gradient descent algorithm is just a little bit different:  \n",
     "\n",
-    "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\R^+$, total number of timesteps $T$. \n",
+    "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\mathbb{R}^+$, total number of timesteps $T$. \n",
     "\n",
     "1. Set $t \\gets 0$. \n",
     "2. While $t < T$: \n",
