--- a/content/modules/50-recursion-recurrence/prep.ipynb
+++ b/content/modules/50-recursion-recurrence/prep.ipynb
@@ -8,7 +8,7 @@
         "title: \"Recurrence Relations\"\n",
         "---"
       ],
-      "id": "524840be"
+      "id": "4c9143c4"
     },
     {
       "cell_type": "markdown",
@@ -36,7 +36,7 @@
         "\n",
         "## Problem 1\n",
         "\n",
-        "Consider the recurrence relation $a_n = 3a_{n-1} - 1$ with initial condition $a_0 = 2$. This recurrence relation has closed formula solution $a_n = 3^n + j$ for some mystery integer $j$. \n",
+        "Consider the recurrence relation $a_n = 3a_{n-1} - 2$ with initial condition $a_0 = 2$. This recurrence relation has closed formula solution $a_n = 3^n + j$ for some mystery integer $j$. \n",
         "\n",
         "## Part A\n",
         "\n",
@@ -109,8 +109,6 @@
         "\n",
         "This completes the inductive step and the proof. \n",
         "\n",
-        "\n",
-        "\n",
         ":::\n",
         ":::\n",
         "\n",
@@ -118,7 +116,7 @@
         "::: {.content-hidden when-meta='solution'}\n",
         "\n",
         "\n",
-        "\\vspace{3cm}\n",
+        "\\vspace{3cthem}\n",
         "\n",
         ":::\n",
         "\n",
@@ -150,7 +148,7 @@
         "\n",
         "Here's a Python implementation: "
       ],
-      "id": "818e5b76"
+      "id": "6531d296"
     },
     {
       "cell_type": "code",
@@ -162,7 +160,7 @@
         "    else:\n",
         "        return p*recursive(p, a0, n-1) + 1"
       ],
-      "id": "9457735a",
+      "id": "965f28b8",
       "execution_count": null,
       "outputs": []
     },
@@ -172,7 +170,7 @@
       "source": [
         "We can call it like this: "
       ],
-      "id": "ce104797"
+      "id": "22008f6f"
     },
     {
       "cell_type": "code",
@@ -180,7 +178,7 @@
       "source": [
         "recursive(2, -1, 10)"
       ],
-      "id": "00faaf65",
+      "id": "b9bcbfed",
       "execution_count": null,
       "outputs": []
     },
@@ -227,7 +225,7 @@
         "\n",
         ":::\n"
       ],
-      "id": "f98ec398"
+      "id": "52678a7a"
     }
   ],
   "metadata": {
