--- a/content/modules/55-numerical-algorithms/prep.ipynb
+++ b/content/modules/55-numerical-algorithms/prep.ipynb
@@ -8,7 +8,7 @@
         "title: \"Numerical Algorithms\"\n",
         "---"
       ],
-      "id": "be8de544"
+      "id": "0ac9d74d"
     },
     {
       "cell_type": "markdown",
@@ -63,7 +63,7 @@
         "\n",
         "Here is a Python implementation: "
       ],
-      "id": "60d8a18f"
+      "id": "a98670b2"
     },
     {
       "cell_type": "code",
@@ -84,7 +84,7 @@
         "\n",
         "    return x"
       ],
-      "id": "cf4272c3",
+      "id": "abe58bf0",
       "execution_count": null,
       "outputs": []
     },
@@ -94,7 +94,7 @@
       "source": [
         "We can call it like this: "
       ],
-      "id": "16f448ef"
+      "id": "5120f32c"
     },
     {
       "cell_type": "code",
@@ -102,7 +102,7 @@
       "source": [
         "mystery(81)"
       ],
-      "id": "5be8f193",
+      "id": "69ad9b00",
       "execution_count": null,
       "outputs": []
     },
@@ -131,7 +131,7 @@
         "::: {.content-visible when-meta='solution'}\n",
         "::: {.callout-note}\n",
         "\n",
-        "After a few tries with different numbers, you might be able to guess that `myster(a)` approximates the square root of `a`. \n",
+        "After a few tries with different numbers, you might be able to guess that `mystery(a)` approximates the square root of `a`. \n",
         "\n",
         ":::\n",
         ":::\n",
@@ -144,7 +144,7 @@
         "\n",
         ":::\n"
       ],
-      "id": "f611f4b4"
+      "id": "c4ccde94"
     }
   ],
   "metadata": {
