--- a/docs/assignments/labs/04-lattice-paths.ipynb
+++ b/docs/assignments/labs/04-lattice-paths.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "Below, I've partially implemented the function `count_lattice_paths`, which accepts a lattice `L` and returns the number of paths from the bottom left to the top right. \n",
     "\n",
-    "In order to do this, you are going to use a *recurrence relation* which generalizes the recurrence relation for binomial coefficients in [DMOI 1.2](https://discrete.openmathbooks.org/dmoi3/sec_counting-binom.html). Let $p_{i,j}$ denote the number of lattice paths from cell $(1,1)$ to cell $(i,j)$ on the lattice. Then, \n",
+    "In order to do this, you are going to use a *recurrence relation* which generalizes the recurrence relation for binomial coefficients in [DMOI 1.2](https://discrete.openmathbooks.org/dmoi3/sec_counting-binom.html). Let $p_{i,j}$ denote the number of lattice paths from cell $(0,0)$ to cell $(i-1,j-1)$ on the lattice (we're starting at $(0, 0)$ and subtracting 1 due to Python's zero-based indexing). Then, \n",
     "\n",
     "$$\n",
     "p_{i,j} = \n",
@@ -161,7 +161,7 @@
     "    1 &\\quad (i,j) = (1,1) \\text{ and } (i,j) \\text{ is passable}\\\\ \n",
     "    p_{i-1,0} &\\quad j = 0 \\text{ and } i > 0 \\text{ and } (i,j) \\text{ is passable}\\\\ \n",
     "    p_{0,j-1} &\\quad i = 0 \\text{ and } j > 0 \\text{ and } (i,j) \\text{ is passable}\\\\ \n",
-    "    p_{i-1,j} + p_{j-1,i} &\\quad i,j > 0 \\text{ and } (i,j) \\text{ is passable}\n",
+    "    p_{i-1,j} + p_{i,j-1} &\\quad i,j > 0 \\text{ and } (i,j) \\text{ is passable}\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
@@ -693,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
