--- a/assignments/labs/05-gradient-descent.ipynb
+++ b/assignments/labs/05-gradient-descent.ipynb
@@ -39,9 +39,7 @@
    "source": [
     "# Background: Gradient Descent\n",
     "\n",
-    "In many contexts in data science, machine learning, artificial intelligence, and various forms of engineering, it is necessary to *minimize a function* -- find it's smallest value. If you've ever wondered why OpenAI needs all that money, the answer is that they need to use supercomputers in order to minimize extremely complicated functions very efficiently. \n",
-    "\n",
-    "\n",
+    "In many contexts in data science, machine learning, artificial intelligence, and various forms of engineering, it is necessary to *minimize a function* -- find it's smallest value. If you've ever wondered why OpenAI needs all that money to make ChatGPT, one of the main answers  is that they need to use supercomputers in order to minimize extremely complicated functions very efficiently. \n",
     "\n",
     "**Definition**: A function $f: \\mathbb{R} \\rightarrow \\mathbb{R}$ has a (strict) *minimizer* $x^*\\in \\mathbb{R}$ if, for all $x \\in \\mathbb{R}$ such that $x \\neq x^*$, it is the case that $f(x^*) < f(x)$. In this case, the *minimum value* of $f$ is $f(x^*)$. The task of *minimizing a function* is the task of finding a minimum $x^*$, if it exists. \n",
     "\n",
@@ -84,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In all real-world applications, we have to deal with more complicated functions whose minimizers we don't know exactly. To do this, we use an algorithm called *gradient descent*, in which we take a small step in (what is hopefully) the right direction many times over. For example, here's an example of gradient descent in action on this function. We start off with an initial guess that might be very far from the correct minimizer. Then, we take little steps in the right direction, towards the basin of the parabola. As we go, we get closer and closer to the correct minimizer at $x = 0$. It's easiest to start with a picture: "
+    "In all real-world applications, we have to deal with more complicated functions whose minimizers we don't know exactly. To find minimizers of these functions, we use a family of algorithms based on the idea of *gradient descent*, in which we take a small step in (what is hopefully) the right direction many times over. For example, here's a gradient descent implementation for the function $f(x) = \\frac{1}{2}x^2$. We start off with an initial guess that might be very far from the correct minimizer. Then, we take little steps in the right direction, towards the basin of the parabola. As we go, we get closer and closer to the correct minimizer at $x = 0$. It's easiest to start with a picture: "
    ]
   },
   {
@@ -118,12 +116,14 @@
     "t = 0       # initial timestep\n",
     "alpha = 0.1 # learning rate\n",
     "\n",
+    "\n",
+    "# this loop is where gradient descent happens\n",
     "while t < T: \n",
     "    \n",
     "    # plot current guess\n",
     "    plt.scatter([x_guess], [1/2*x_guess**2], color = \"black\", zorder = 10, s = 5, alpha = 0.5)\n",
     "    \n",
-    "    # adjust the guess\n",
+    "    # gradient descent update\n",
     "    x_guess = x_guess - alpha*x_guess\n",
     "    \n",
     "    # increment the timestep\n",
@@ -145,7 +145,7 @@
    "source": [
     "## The Gradient Descent Algorithm For $f(x) = \\frac{1}{2}x^2$\n",
     "\n",
-    "The algorithm for gradient descent for $f(x) = \\frac{1}{2}x^2$ works as follows. \n",
+    "Formally, the algorithm for gradient descent for $f(x) = \\frac{1}{2}x^2$ works as follows. \n",
     "\n",
     "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\mathbb{R}^+$, total number of timesteps $T$. \n",
     "\n",
@@ -154,7 +154,7 @@
     "    - Set $x_t \\gets x_{t-1} - \\alpha x_{t-1}$. \n",
     "    - $t \\gets t+1$.\n",
     "\n",
-    "You can see this algorithm in action in the code block and plot above."
+    "This is the algorithm implemented in the Python code block above. "
    ]
   },
   {
@@ -194,7 +194,7 @@
    "source": [
     "### Exercise A.2 \n",
     "\n",
-    "At the board, write a proof using induction on the timestep $t$ to prove solve the recurrence relation:  \n",
+    "At the board, write a proof by induction on the timestep $t$ that the following formula solves the recurrence relation from A.1:  \n",
     "\n",
     "$$\n",
     "\\delta_t = |1-\\alpha|^{t} \\delta_0\\;. \n",
@@ -219,7 +219,7 @@
     "\n",
     "## Exercise A.3 \n",
     "\n",
-    "There exist numbers $\\alpha_*$ and $\\alpha^*$ with the property that $\\delta_t < \\delta_{t-1}$ if and only if $\\alpha_* < \\alpha < \\alpha^*$. Determine the values of $\\alpha_*$ and $\\alpha^*$ and explain. You'll need to use the recursion relation in A.2. "
+    "There exist numbers $\\alpha_*$ and $\\alpha^*$ with the property that $\\delta_t < \\delta_{t-1}$ if and only if $\\alpha_* < \\alpha < \\alpha^*$. Determine the values of $\\alpha_*$ and $\\alpha^*$ and explain. You'll need to use the recursion relation in A.1. "
    ]
   },
   {
@@ -307,7 +307,7 @@
     "\n",
     "Below, I've started a computational experiment in which I've run the gradient descent algorithm for two separate values of $\\alpha$. On the horizontal axis I've plotted the iteration number, and on the vertical axis I've plotted the error $\\delta_t$ on log-scaled axes. \n",
     "\n",
-    "For the value of $\\alpha$ I chose, the error decreases on the log-scled axes. \n",
+    "For the value of $\\alpha$ I chose, the error decreases on the log-scaled axes. \n",
     "\n",
     "Guided by your results in the previous parts, add two values of $\\alpha$ to the `alpha_vals` list such that: \n",
     "\n",
@@ -373,7 +373,7 @@
    "source": [
     "## Part C (Required for **E**, optional for **M**)\n",
     "\n",
-    "*If you are happy with an **M** on this assignment, you can skip all of Part C. You should solve this part only if you want an E.*"
+    "*If you are happy with an **M** on this assignment, you can skip all of Part C and move on to Part D. You should solve this part only if you want an E.*"
    ]
   },
   {
@@ -381,7 +381,6 @@
    "metadata": {},
    "source": [
     "Consider now the general quadratic function $f(x) = \\frac{1}{2} ax^2 + bx + c$ for some $a > 0$ and $b, c \\in \\mathbb{R}$. \n",
-    "\n",
     "This function has its minimum at the point $x_* = -\\frac{b}{a}$. For this function, the gradient descent algorithm is just a little bit different:  \n",
     "\n",
     "**Inputs**: initial guess $x_0$, learning rate $\\alpha \\in \\mathbb{R}^+$, total number of timesteps $T$. \n",
