minor revision to lab 5

--- a/assignments/labs/05-gradient-descent.ipynb
+++ b/assignments/labs/05-gradient-descent.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "# Instructions\n",
     "\n",
-    "In Parts A-C, **you should not be typing during the lab period**. You can use your device to look at the lab instructions and for quick checks, but now is not the time for typing. Instead, you should work with your group at your board or on your mini-boards on the specified problems. \n",
+    "In Part A, **you should not be typing during the lab period**. You can use your device to look at the lab instructions and for quick checks, but now is not the time for typing. Instead, you should work with your group at your board or on your mini-boards on the specified problems. \n",
     "\n",
     "- Remember your group norms from Lab 1. \n",
     "- Pass the marker often, *at minimum* twice in every Part. \n",
