add probability content

--- a/content/modules/81-probability-2/prep.ipynb
+++ b/content/modules/81-probability-2/prep.ipynb
@@ -8,7 +8,7 @@
         "title: \"Sample Spaces and Conditional Probability\" \n",
         "---"
       ],
-      "id": "da4c91b9"
+      "id": "3ede0e6c"
     },
     {
       "cell_type": "markdown",
@@ -111,7 +111,7 @@
         "\n",
         "You may answer the following two questions using any tools you wish, although my advice is to write short Python programs. \n",
         "\n",
-        "## Part A\n",
+        "### Part A\n",
         "\n",
         "Suppose that two random citizens of the UK (born between 1995-2014) meet each other on the street. What is the probability that they were born in the same month?\n",
         "\n",
@@ -128,7 +128,7 @@
         "\n",
         "Here's some code that lets us do this: "
       ],
-      "id": "cd88b1cf"
+      "id": "e868804b"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "    prob_same_month += probs[i]**2\n",
         "print(prob_same_month)"
       ],
-      "id": "20056bc2",
+      "id": "1fea3f93",
       "execution_count": null,
       "outputs": []
     },
@@ -155,7 +155,7 @@
       "source": [
         "This is also a nice opportunity to use list comprehensions if you know that syntax: "
       ],
-      "id": "c98e8f49"
+      "id": "1847535c"
     },
     {
       "cell_type": "code",
@@ -163,7 +163,7 @@
       "source": [
         "print(sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "db701a4b",
+      "id": "6dbfd5d7",
       "execution_count": null,
       "outputs": []
     },
@@ -183,7 +183,7 @@
         ":::\n",
         "\n",
         "\n",
-        "## Part B\n",
+        "### Part B\n",
         "\n",
         "Suppose that two people meet and tell you that they have the same birthmonth. What is the probability that their birthmonth is April, given this information?\n",
         "\n",
@@ -202,7 +202,7 @@
         "\n",
         "Here's some Python code to calculate this: "
       ],
-      "id": "cc936ed2"
+      "id": "8cc06823"
     },
     {
       "cell_type": "code",
@@ -210,7 +210,7 @@
       "source": [
         "print(probs[3]**2 / sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "c49b377c",
+      "id": "0c3e2add",
       "execution_count": null,
       "outputs": []
     },
@@ -229,7 +229,7 @@
         ":::\n",
         "\n",
         "\n",
-        "## Part C\n",
+        "### Part C\n",
         "\n",
         "Suppose that someone tells you that they share a birthmonth with the first random person they met on the street today. Does that make it more, less, or equally likely that they were born in April? \n",
         "\n",
@@ -249,7 +249,7 @@
         "\n",
         ":::\n",
         "\n",
-        "## Part D\n",
+        "### Part D\n",
         "\n",
         "Are the events \"being born in April\" and \"sharing a birthmonth with the first person you meet on the street\" independent? \n",
         "\n",
@@ -269,7 +269,7 @@
         "\n",
         ":::\n"
       ],
-      "id": "4616fef4"
+      "id": "fd325a0e"
     }
   ],
   "metadata": {
