--- a/content/modules/81-probability-2/prep.ipynb
+++ b/content/modules/81-probability-2/prep.ipynb
@@ -6,9 +6,10 @@
       "source": [
         "---\n",
         "title: \"Sample Spaces and Conditional Probability\" \n",
+        "solution: true\n",
         "---"
       ],
-      "id": "3ede0e6c"
+      "id": "07d4c0ca"
     },
     {
       "cell_type": "markdown",
@@ -128,7 +129,7 @@
         "\n",
         "Here's some code that lets us do this: "
       ],
-      "id": "e868804b"
+      "id": "94bc2991"
     },
     {
       "cell_type": "code",
@@ -145,7 +146,7 @@
         "    prob_same_month += probs[i]**2\n",
         "print(prob_same_month)"
       ],
-      "id": "1fea3f93",
+      "id": "1f1b908c",
       "execution_count": null,
       "outputs": []
     },
@@ -155,7 +156,7 @@
       "source": [
         "This is also a nice opportunity to use list comprehensions if you know that syntax: "
       ],
-      "id": "1847535c"
+      "id": "b3937275"
     },
     {
       "cell_type": "code",
@@ -163,7 +164,7 @@
       "source": [
         "print(sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "6dbfd5d7",
+      "id": "c9a8666d",
       "execution_count": null,
       "outputs": []
     },
@@ -202,7 +203,7 @@
         "\n",
         "Here's some Python code to calculate this: "
       ],
-      "id": "8cc06823"
+      "id": "cfb51d96"
     },
     {
       "cell_type": "code",
@@ -210,7 +211,7 @@
       "source": [
         "print(probs[3]**2 / sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "0c3e2add",
+      "id": "260bb8e6",
       "execution_count": null,
       "outputs": []
     },
@@ -269,7 +270,7 @@
         "\n",
         ":::\n"
       ],
-      "id": "fd325a0e"
+      "id": "23892daa"
     }
   ],
   "metadata": {
