various probability updates

--- a/content/modules/81-probability-2/prep 2.ipynb
+++ b/content/modules/81-probability-2/prep 2.ipynb
@@ -9,7 +9,7 @@
         "solution: true\n",
         "---"
       ],
-      "id": "6d7253bf"
+      "id": "ddcad811"
     },
     {
       "cell_type": "markdown",
@@ -129,7 +129,7 @@
         "\n",
         "Here's some code that lets us do this: "
       ],
-      "id": "d1bbc9cd"
+      "id": "2c22a7e0"
     },
     {
       "cell_type": "code",
@@ -146,7 +146,7 @@
         "    prob_same_month += probs[i]**2\n",
         "print(prob_same_month)"
       ],
-      "id": "a04007ae",
+      "id": "e5479ced",
       "execution_count": null,
       "outputs": []
     },
@@ -156,7 +156,7 @@
       "source": [
         "This is also a nice opportunity to use list comprehensions if you know that syntax: "
       ],
-      "id": "236129e4"
+      "id": "62a0de2d"
     },
     {
       "cell_type": "code",
@@ -164,7 +164,7 @@
       "source": [
         "print(sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "b9c56a05",
+      "id": "c631d9ec",
       "execution_count": null,
       "outputs": []
     },
@@ -203,7 +203,7 @@
         "\n",
         "Here's some Python code to calculate this: "
       ],
-      "id": "17f45870"
+      "id": "533fcb85"
     },
     {
       "cell_type": "code",
@@ -211,7 +211,7 @@
       "source": [
         "print(probs[3]**2 / sum([probs[i]**2 for i in range(len(months))]))"
       ],
-      "id": "ebdab165",
+      "id": "0e04735c",
       "execution_count": null,
       "outputs": []
     },
@@ -270,14 +270,14 @@
         "\n",
         ":::\n"
       ],
-      "id": "49cf09bf"
+      "id": "706bb6ce"
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "name": "python2",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "display_name": "Python 2"
     }
   },
   "nbformat": 4,
