--- a/content/modules/61-complexity/prep 2.ipynb
+++ b/content/modules/61-complexity/prep 2.ipynb
@@ -8,7 +8,7 @@
         "title: \"Introducing Analysis of Algorithms\"\n",
         "---"
       ],
-      "id": "9ffadb34"
+      "id": "60a5803f"
     },
     {
       "cell_type": "markdown",
@@ -44,7 +44,7 @@
         "\\end{aligned}\n",
         "$$\n"
       ],
-      "id": "967fbb21"
+      "id": "31824ee7"
     },
     {
       "cell_type": "code",
@@ -59,7 +59,7 @@
         "for n in [2, 8, 64, 1024]:\n",
         "    print(n ,\" | \", f(n))"
       ],
-      "id": "08a72f52",
+      "id": "506a749f",
       "execution_count": null,
       "outputs": []
     },
@@ -189,14 +189,14 @@
         "\n",
         ":::\n"
       ],
-      "id": "2fae45d3"
+      "id": "0b70568e"
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "name": "python2",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "display_name": "Python 2"
     }
   },
   "nbformat": 4,
